Fixed some small layout issues

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -218,6 +218,7 @@ blockquote:before {
   }
   
   ul.lang-list li {
+	  margin-top: 0px;
 	  margin-bottom: 10px;
   }
   .rounded img , .rounded video, p img{
